--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Analisador Sintático LL(1)</title>
+    <title>Analisador Sintático</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <h1>Analisador Sintático LL(1)</h1>
+    <h1>Analisador Sintático</h1>
 
     <div class="container">
 
